# packed_optional

./: .travis.yml  CMakeLists.txt  README.md  coverage.sh
.github/workflows/: ubuntu.yml  windows.yml
docs/: CMakeLists.txt  mainpage.md
include/packed_optional/: packed_optional.hpp
libs/: CMakeLists.txt
test/: CMakeLists.txt  packed_optional_test.cpp
